# sshx-on-demand

./: README.md
.github/workflows/: release.yml
frontend/: Dockerfile  docker-compose.yml  next.config.mjs  package-lock.json  package.json  sample.env
frontend/app/: page.tsx
frontend/app/api/sshx/: route.ts
host_app/: Cargo.toml  README.md  sshx-on-demand.service
host_app/src/: main.rs
