[package]
name = "sshx-on-demand"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/cryingpotat0/sshx-on-demand"
description = "Enable remote editing on any remote server. Powered by sshx."
license = "MIT"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
unix-named-pipe = "0.2"
log = "0.4"
env_logger = "0.10"
libc = "0.2"
clap = { version = "4.5.20", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
